logs/watchdog_20251012_2330.log
[12/10/2025 23:30:01,63] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 23:30:01,85] END WATCHDOG 
